[package]
name = "gup"
version = "1.2.0"
edition = "2021"
description = "git add + commit + push with conventional commits and AI message generation"
license = "MIT"

[[bin]]
name = "gup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ratatui = "0.29"
crossterm = "0.28"
